hphp/hack/test/typecheck/gen6.php.exp
File "gen6.php", line 25, characters 12-12:
Some type constraint(s) here are violated (Typing[4110])
File "gen6.php", line 12, characters 9-9:
'T' is a constrained type parameter
File "gen6.php", line 12, characters 14-17:
This is an object of type A
File "gen6.php", line 26, characters 15-15:
It is incompatible with an object of type Z
